69. Add option to only act on songs that pass current string or genre filter.
70. Multiple genre support.
71. Store favourite streams as '[Radio Streams]' MPD playlist.
72. For tracks for mutliple-artist albums, show as 'title - artist' and not
    'artist - title'
73. In playqueue, if song's artist is different to album artist, then show song
    as 'title - artist'

1.3.4
-----
 1. Fix adding songs to playqueue with priority when playqueue is not empty.
 2. When loading covers, if load fails, check to see if this is because of an
    incorrect extension. e.g. load a .jpg file with PNG type, and vice versa.
 3. Fix showing of time-slider when Cantata is started minimized to system tray
    and MPD is playing.
 4. Remove unused 'Back' action.
 5. Don't treat albums with artists such as 'AlbumArtist ft Other' as multiple
    artist albums.
 6. Fix updating of playqueue sidebar tooltip and icon.
 7. Add playqueue action to main window, so that shortcut works.
 8. When using track organizer, also try to move artist images, backdrop images,
    and playlist files.
 9. After altering filename scheme from track organizer, save settings.
10. Don't set year or disc in tag editor for 'All Tracks' unless they are non
    zero.
11. In tag-editor, when obtaining values to use for 'All Tracks' entry, don't
    ignore empty fields.
12. When determining album year, ignore playlist files!
13. If MPD database is refreshed whilst listview is not at top level, then
    reset view to top level.
14. When TrackOrganizer is called after TagEditor, only perform MPD update
    once.
15. When editing filename scheme, after inserting a variable set cursor
    position to after newly inserted text and give focus back to line edit.

1.3.3
-----
 1. If Cantata is started whilst an instance is also running, raise window of
    current instance. (Linux-only fix)
 2. Add song to playqueue from albums page when double-clicked.
 3. Fix display of online service track album-artist in copy dialog.