@@ -116,6 +116,8 @@
     'artist - title'
 73. In playqueue, if song's artist is different to album artist, then show song
     as 'title - artist'
+74. Also use musicbrainz_albumid, if present, to group albums. This can be used
+    to group multiple releases of the same album.
 
 1.3.4
 -----
